--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de conafianza</span>
+                <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -16,6 +16,7 @@
                     Los blogs son las mejor forma de compartir informacion y tus ideas.
                     Muchos mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres...por ahora.
                 </p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
