quite la n del titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Cambien el titulo desde github 2.0</title>
+        <title>Cambie el titulo desde github 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" >
     </head>
     <body>
